--- a/index.html
+++ b/index.html
@@ -10,10 +10,21 @@
             overflow: hidden;
         }
         #button-container {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            z-index: 1;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        #startButton {
+            padding: 20px;
+            font-size: 20px;
+        }
+        #volbutcont{
+            position: fixed;
+            top: 0;
+            left: 0;
+            padding: 10px;
         }
         #volume-display {
             position: absolute;
