--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         }
         #button-container {
             position: fixed;
-            top: 0%;
+            top: 7%;
             left: 50%;
             transform: translate(-50%, -50%);
         }
@@ -19,6 +19,10 @@
         #startButton {
             padding: 20px;
             font-size: 20px;
+            background-color: rgb(107, 32, 128);
+            border-radius: 15px;
+            color: white;
+            font-weight: bold;
         }
         #volbutcont{
             position: fixed;
