--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
             top: 0;
             left: 0;
             padding: 10px;
+            
+        }
+        #volbutcont button{
+            padding: 5px;
+            font-size: 14px;
+            background-color: rgb(107, 32, 128);
+            border-radius: 10px;
+            color: white;
+            font-weight: bold;
         }
         #volume-display {
             position: absolute;
